# amplifier-bundle-creative

./: .gitignore  README.md  bundle.md
agents/: audio-producer.md  creative-director.md  image-generator.md  intake-analyst.md  post-producer.md  qa-reviewer.md  video-generator.md
behaviors/: audio-production.yaml  full-production.yaml  post-production.yaml  pre-production.yaml  shot-production.yaml
context/: CHARACTER_SHEET_TEMPLATE.md  INTAKE_CHECKLIST.md  MODEL_SELECTION_GUIDE.md  OPERATOR_INTENT_MAP_TEMPLATE.md  PRODUCTION_DECISIONS.md  SHOT_LIST_TEMPLATE.md  SHOT_SPEC_SCHEMA.md  STYLE_BIBLE_TEMPLATE.md  creative-awareness.md  creative-instructions.md
docs/: KNOWN_ISSUES.md  OPERATOR_ASSET_INTAKE.md  PRODUCTION_LESSONS.md  PROJECT_STRUCTURE.md  api-privacy-comparison.html  api-privacy-comparison.md
modules/tool-video/: README.md  pyproject.toml
modules/tool-video/amplifier_module_tool_video/: __init__.py  provider.py  schemas.py  validation.py
modules/tool-video/tests/: test_validation.py
recipes/: animate-existing-stills.yaml  commercial-from-brief.yaml  project-intake.yaml  trailer-from-picture-book.yaml
samples/milk-racing-spot/: README.md
samples/milk-racing-spot/01_brief/: CREATIVE_BRIEF.md
samples/milk-racing-spot/02_preproduction/: SHOT_LIST.md  STYLE_BIBLE.md
samples/milk-racing-spot/08_qa/: production_manifest.json
samples/milk-racing-spot/scripts/: produce_commercial.py  produce_commercial_v2.py
spec/: DECISIONS.md  SPEC.md
