[project]
name = "amplifier-module-tool-video"
version = "0.1.0"
description = "Amplifier tool module for video generation via Google Veo 3.1"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# amplifier-core is a peer dependency — do NOT declare it here.
# It is declared in [project.optional-dependencies].dev for local dev/tests only.
dependencies = [
    "google-genai>=0.3",
    "pydantic>=2",
    "httpx>=0.27",
    "PyYAML>=6",
]

[project.entry-points."amplifier.modules"]
tool-video = "amplifier_module_tool_video:mount"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "amplifier-core",
]

# TODO (future): when extracting to its own repo, wire amplifier-core via uv.sources:
# [tool.uv.sources]
# amplifier-core = { git = "https://github.com/microsoft/amplifier-core@main", ... }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_video"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# TODO: Planned extensions — see spec/DECISIONS.md for forensic backstory
#   - Sora 2 support     (D010 — stub only; integrate when API stabilises)
#   - xAI Grok Video     (deferred — API not yet evaluated)
#   - Edit/extend-video  (Veo 3.1 preview APIs not stable enough yet)
#   - Extract to own repo when other bundles need tool-video
